donorIds becomes samples in GraphEvent